hay_que_terminar_la_guia

--- a/G5_Matrices.ipynb
+++ b/G5_Matrices.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -196,6 +196,161 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 76,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "J = np.array([[100, 200, 150],\n",
+        "              [120, 210, 170],\n",
+        "              [112, 200, 131],\n",
+        "              [124, 310, 170],\n",
+        "              [136, 156, 140]])\n",
+        "\n",
+        "C = np.array([[110, 190, 160],\n",
+        "              [130, 220, 180],\n",
+        "              [146, 190, 141],\n",
+        "              [143, 312, 163],\n",
+        "              [137, 116, 156]])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. ¿Cuál es el orden de las matrices?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(5, 3)\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(C.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El orden de las 2 matrices es (5 = modelos de computador,3 = tipos de componentes)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Inteprete el elemento $j_{21}$ y $c_{12}$ en el contexto del problema."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 78,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "120 190\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(J[1][0],C[0][1])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El elemento $j_{21}$ dice el costo de producción mensual para el modelo 2 de computador con el tipo de componente 1 en Japón, el cual es de 120 mil dolares, mientras que el elemento $c_{12}$ dice el costo de producción mensual para el modelo 1 de computador con el tipo de componente 2 en China, el cual es de 190 mil dolares."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Utilizando *Python*, calcule el costo total de producción para cada modelo, considerando ambas sucursales."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 79,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "910\n",
+            "1030\n",
+            "920\n",
+            "1222\n",
+            "841\n"
+          ]
+        }
+      ],
+      "source": [
+        "costo_mensual = []\n",
+        "for x in range(0,5):\n",
+        "    costo_mensual.append((J[x],C[x]))\n",
+        "    print(sum(sum(costo_mensual[x])))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Total de costos de producción por modelo de computador, contando ambas surcusales:\n",
+        "1. modelo 1 = 910 mil dolares\n",
+        "2. modelo 2 = 1030 mil dolares\n",
+        "3. modelo 3 = 920 mil dolares\n",
+        "4. modelo 4 = 1222 mil dolares\n",
+        "5. modelo 5 = 841 mil dolares"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Un trabajador indica que, en la sucursal japonesa, el costo de producción del producto $3$, modelo $4$ de computador, es más alto que en la sucursal china. ¿Tiene razón? Justifique apropiadamente."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 80,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "170 163\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(J[3][2],C[3][2])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El trabajador si tiene razón, ya que el costo de producción mensual del producto 3 del modelo de cpmputador 4 en Japón es de 170 mil dolares, mientras que en China es de 163 mil dolares."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "d1kLjxmU8En9"
@@ -234,6 +389,128 @@
         "2. Si representamos la producción semanal total de la empresa Beta, considerando ambas filiales, por la matriz $T$, escriba la expresión que calcula cada elemento de la matriz $T$ usando notación matricial.\n",
         "3. Calcule la matriz $T$ utilizando *Python*.\n",
         "4. Interprete los elementos $c_{34}$ y $t_{72}$ en el contexto del problema."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 81,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "C = np.array([[120, 200, 155, 125, 230],\n",
+        "              [155, 130, 110, 160, 180],\n",
+        "              [140, 205, 150, 125, 155],\n",
+        "              [130, 120, 230, 225, 125],\n",
+        "              [135, 70, 190, 175, 95],\n",
+        "              [110, 265, 180, 230, 180],\n",
+        "              [185, 85, 120, 135, 150]])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Si se sabe que los volúmenes de producción semanal de la filial en Ecuador son un $20\\%$ menor que en Chile, calcule la matriz $E$ utilizando *Python*."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 82,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[ 96. 160. 124. 100. 184.]\n",
+            " [124. 104.  88. 128. 144.]\n",
+            " [112. 164. 120. 100. 124.]\n",
+            " [104.  96. 184. 180. 100.]\n",
+            " [108.  56. 152. 140.  76.]\n",
+            " [ 88. 212. 144. 184. 144.]\n",
+            " [148.  68.  96. 108. 120.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "E = C * 0.8\n",
+        "print(E)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Si representamos la producción semanal total de la empresa Beta, considerando ambas filiales, por la matriz $T$, escriba la expresión que calcula cada elemento de la matriz $T$ usando notación matricial."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La notación matricial de la matriz $T$ es $t_{ij}$ = $c_{ij}$ + $e_{ij}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Calcule la matriz $T$ utilizando *Python*."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[216. 360. 279. 225. 414.]\n",
+            " [279. 234. 198. 288. 324.]\n",
+            " [252. 369. 270. 225. 279.]\n",
+            " [234. 216. 414. 405. 225.]\n",
+            " [243. 126. 342. 315. 171.]\n",
+            " [198. 477. 324. 414. 324.]\n",
+            " [333. 153. 216. 243. 270.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "T = C + E\n",
+        "print(T)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Interprete los elementos $c_{34}$ y $t_{72}$ en el contexto del problema."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 84,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "125 153.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(C[2][3],T[6][1])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El elemento $c_{34}$ dice la cantidad de producto producido para el producto 4 de la planta 3 en la filial de Chile, se producieron 125 productos, mientras que el elemento $t_{72}$ dice la cantidad de producto producido para el producto 2 de la planta 7 en la filial de Ecuador, se producieron 153 productos."
       ]
     },
     {
