--- a/G6_Aplicaciones_de_matrices.ipynb
+++ b/G6_Aplicaciones_de_matrices.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -641,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -688,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -782,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -852,6 +852,56 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. ¿Qué representan las incógnitas del sistema?\n",
+        "* $p$ = cantidad de patos\n",
+        "* $v$ = cantidad de vacas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. ¿Cuántos patos hay?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[63.]\n",
+            " [69.]]\n",
+            "[[132.]\n",
+            " [402.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "A = np.array([[1,1],\n",
+        "              [2,4]])\n",
+        "A_inv = np.linalg.inv(A)\n",
+        "B = np.array([[132],\n",
+        "              [402]])\n",
+        "C = A_inv.dot(B)\n",
+        "print(C)\n",
+        "print(A.dot(C))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Hay 63 patos en total."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "u4IT_mcqAc-h"
       },
@@ -881,6 +931,56 @@
         "\n",
         "1. ¿Qué representa cada incógnita en el contexto del problema?\n",
         "2. Determina cuánto pagaron por cada cable USB."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. ¿Qué representa cada incógnita en el contexto del problema?\n",
+        "* $x$ = precio de cables USB\n",
+        "* $y$ = precio de pendrives"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Determina cuánto pagaron por cada cable USB."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[12990.]\n",
+            " [ 2990.]]\n",
+            "[[82890.]\n",
+            " [59900.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "A = np.array([[5,6],\n",
+        "              [3,7]])\n",
+        "A_inv = np.linalg.inv(A)\n",
+        "B = np.array([[82890],\n",
+        "              [59900]])\n",
+        "C = A_inv.dot(B)\n",
+        "print(C)\n",
+        "print(A.dot(C))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Cada cable USB cuesta $12.990"
       ]
     }
   ],
